With with-ssl-default-suites=openssl

--- a/3.11/slim-bullseye/Dockerfile
+++ b/3.11/slim-bullseye/Dockerfile
@@ -72,6 +72,7 @@ RUN set -eux; \
 		--enable-loadable-sqlite-extensions \
 		--enable-optimizations \
 		--enable-option-checking=fatal \
+		--with-ssl-default-suites=openssl \
 		--enable-shared \
 		--with-lto \
 		--with-system-expat \
